# Marquinhos-MLDSRP1

./: .gitignore  .swp  LICENSE  Makefile  README.md  Untitled.ipynb  Untitled2.ipynb  main.py  pyproject.toml
Notebooks/: Clasificacion_Logistica.ipynb  PCA_Clustering_onehot.ipynb  Regresion_Delivery_time.ipynb  Untitled.ipynb  classification_heart_disease.ipynb
data/: sap500.csv
marquinhos-mle1/: pyproject.toml
models/: Archivopkl_regresionlogistica.pkl  Regresión_Lineal_breastcancer_radiusmean.joblib   Regresión_Logistica_breastcancer.joblib 
package-dsrp-mle1/: __init__.py
package-dsrp-mle1/modeling/: utils.py
