[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "package-dsrp-mle1"
version = "0.0.1"
description = "Ejemplo de uso de cookiecutter para el curso ded mle1"
authors = [
  { name = "uinhos" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "loguru",
    "pip",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["package-dsrp-mle1"]
include = ["pyproject.toml", "package-dsrp-mle1/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["package-dsrp-mle1"]
force-sort-within-sections = true

